--- a/index.html
+++ b/index.html
@@ -119,15 +119,15 @@
             document.getElementById('result').innerHTML = "Pace (" + distance + " กม.): " + paceSecondsPerKm.toFixed(2) + " วินาที/กิโลเมตร";
             document.getElementById('vcrDistance').innerHTML = "VCR Distance (60 mins): " + vcrDistanceMeters + " เมตร";
             document.getElementById('vcr').innerHTML = "VCR: " + vcrSpeed + " m/s";
-            document.getElementById('vcrPace').innerHTML = "VCR Pace: " + vcrPaceMinutes + ":" + (vcrPaceSeconds < 10 ? "0" + vcrPaceSeconds : vcrPaceSeconds) + " นาที/กิโลเมตร";
+            document.getElementById('vcrPace').innerHTML = "VCR Pace: " + vcrPaceMinutes + ":" + (vcrPaceSeconds < 10 ? "0" + vcrPaceSeconds : vcrPaceSeconds) + " นาที/กม.";
 
             // แสดงผล Pace สำหรับแต่ละช่วงการวิ่ง
             document.getElementById('arr').innerHTML = "Aerobic Regeneration Run (ARR): " + pace1 + " หรือช้ากว่า ระยะเวลา 30 นาที";
-            document.getElementById('scr').innerHTML = "Long Slow Distance (LSD): " + pace2 + " - " + pace1 + " ระยะเวลา 90-180 นาที";
-            document.getElementById('scr').innerHTML = "Slow Continuous Run (SCR): " + pace3 + " - " + pace2 + " ระยะเวลา 60-90 นาที";
-            document.getElementById('mcr').innerHTML = "Medium Continuous Run (MCR): " + pace4 + " - " + pace3 + " ระยะเวลา 45-60 นาที";
-            document.getElementById('fcr').innerHTML = "Fast Continuous Run (FCR): " + pace5 + " - " + pace4 + " ระยะเวลา 30-45 นาที";
-            document.getElementById('eir').innerHTML = "Extensive Interval Run (EIR): " + pace7 + " - " + pace6 + " วิ่ง 5 นาที พัก 1-3 นาที 4-6 รอบ";
+            document.getElementById('lsd').innerHTML = "Long Slow Distance (LSD)      : " + pace2 + " - " + pace1 + " ระยะเวลา 90-180 นาที";
+            document.getElementById('scr').innerHTML = "Slow Continuous Run (SCR)     : " + pace3 + " - " + pace2 + " ระยะเวลา 60-90 นาที";
+            document.getElementById('mcr').innerHTML = "Medium Continuous Run (MCR)   : " + pace4 + " - " + pace3 + " ระยะเวลา 45-60 นาที";
+            document.getElementById('fcr').innerHTML = "Fast Continuous Run (FCR)     : " + pace5 + " - " + pace4 + " ระยะเวลา 30-45 นาที";
+            document.getElementById('eir').innerHTML = "Extensive Interval Run (EIR)  : " + pace7 + " - " + pace6 + " วิ่ง 5 นาที พัก 1-3 นาที 4-6 รอบ";
         }
     </script>
 
