--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 var minutes = Math.floor(pace / 60);
                 var seconds = Math.round(pace % 60);
                 // แสดงผลในรูปแบบ xx:xx
-                return minutes + ":" + (seconds < 10 ? "0" + seconds : seconds) + " นาที/กิโลเมตร";
+                return minutes + ":" + (seconds < 10 ? "0" + seconds : seconds) +" ";
             }
 
             var pace1 = calculatePaceFromVCR(70);
@@ -123,11 +123,11 @@
             document.getElementById('vcrPace').innerHTML = "VCR Pace: " + vcrPaceMinutes + ":" + (vcrPaceSeconds < 10 ? "0" + vcrPaceSeconds : vcrPaceSeconds) + " นาที/กม.";
 
             // แสดงผล Pace สำหรับแต่ละช่วงการวิ่ง
-            document.getElementById('arr').innerHTML = "Aerobic Regeneration Run (ARR): " + pace1 + " หรือช้ากว่า ระยะเวลา 30 นาที";
-            document.getElementById('lsd').innerHTML = "Long Slow Distance (LSD)      : " + pace2 + " - " + pace1 + " ระยะเวลา 90-180 นาที";
-            document.getElementById('scr').innerHTML = "Slow Continuous Run (SCR)     : " + pace3 + " - " + pace2 + " ระยะเวลา 60-90 นาที";
-            document.getElementById('mcr').innerHTML = "Medium Continuous Run (MCR)   : " + pace4 + " - " + pace3 + " ระยะเวลา 45-60 นาที";
-            document.getElementById('fcr').innerHTML = "Fast Continuous Run (FCR)     : " + pace5 + " - " + pace4 + " ระยะเวลา 30-45 นาที";
+            document.getElementById('arr').innerHTML = "Aerobic Regeneration Run (ARR): " + pace1 + " นาที/กม. หรือช้ากว่า ระยะเวลา 30 นาที";
+            document.getElementById('lsd').innerHTML = "Long Slow Distance (LSD)      : " + pace2 + " - " + pace1 + " นาที/กม. ระยะเวลา 90-180 นาที";
+            document.getElementById('scr').innerHTML = "Slow Continuous Run (SCR)     : " + pace3 + " - " + pace2 + " นาที/กม. ระยะเวลา 60-90 นาที";
+            document.getElementById('mcr').innerHTML = "Medium Continuous Run (MCR)   : " + pace4 + " - " + pace3 + " นาที/กม. ระยะเวลา 45-60 นาที";
+            document.getElementById('fcr').innerHTML = "Fast Continuous Run (FCR)     : " + pace5 + " - " + pace4 + " นาที/กม. ระยะเวลา 30-45 นาที";
             document.getElementById('eir').innerHTML = "Extensive Interval Run (EIR)  : " + pace7 + " - " + pace6 + " วิ่ง 5 นาที พัก 1-3 นาที 4-6 รอบ";
         }
     </script>
