--- a/index.html
+++ b/index.html
@@ -55,12 +55,34 @@
     <p id="vcrDistance"></p>
     <p id="vcr"></p>
     <p id="vcrPace"></p>
-    <p id="arr"></p>
-    <p id="lsd"></p>
-    <p id="scr"></p>
-    <p id="mcr"></p>
-    <p id="fcr"></p>
-    <p id="eir"></p>
+<h1>Running Pace Table</h1>
+
+    <table>
+        <tr>
+            <td>Aerobic Regeneration Run (ARR):</td>
+            <td id="arr"></td>
+        </tr>
+        <tr>
+            <td>Long Slow Distance (LSD):</td>
+            <td id="lsd"></td>
+        </tr>
+        <tr>
+            <td>Slow Continuous Run (SCR):</td>
+            <td id="scr"></td>
+        </tr>
+        <tr>
+            <td>Medium Continuous Run (MCR):</td>
+            <td id="mcr"></td>
+        </tr>
+        <tr>
+            <td>Fast Continuous Run (FCR):</td>
+            <td id="fcr"></td>
+        </tr>
+        <tr>
+            <td>Extensive Interval Run (EIR):</td>
+            <td id="eir"></td>
+        </tr>
+    </table>
 
     <script>
         function calculatePace() {
