--- a/index.html
+++ b/index.html
@@ -82,27 +82,27 @@
 
     <table>
         <tr>
-            <td>Aerobic Regeneration Run (ARR):</td>
+            <td>Aerobic Regeneration Run (ARR)</td>
             <td id="arr"></td>
         </tr>
         <tr>
-            <td>Long Slow Distance (LSD):</td>
+            <td>Long Slow Distance (LSD)</td>
             <td id="lsd"></td>
         </tr>
         <tr>
-            <td>Slow Continuous Run (SCR):</td>
+            <td>Slow Continuous Run (SCR)</td>
             <td id="scr"></td>
         </tr>
         <tr>
-            <td>Medium Continuous Run (MCR):</td>
+            <td>Medium Continuous Run (MCR)</td>
             <td id="mcr"></td>
         </tr>
         <tr>
-            <td>Fast Continuous Run (FCR):</td>
+            <td>Fast Continuous Run (FCR)</td>
             <td id="fcr"></td>
         </tr>
         <tr>
-            <td>Extensive Interval Run (EIR):</td>
+            <td>Extensive Interval Run (EIR)</td>
             <td id="eir"></td>
         </tr>
     </table>
