--- a/index.html
+++ b/index.html
@@ -33,9 +33,11 @@
         }
     
         table {
-            width: 100%;
+            width: auto; /* ให้ตารางมีความกว้างตามเนื้อหา */
             border-collapse: collapse;
             margin-top: 20px;
+            margin-left: 0; /* จัดชิดซ้าย */
+            text-align: left; /* จัดข้อความภายในตารางไปทางซ้าย */
         }
         table td {
             padding: 5px 10px;
