--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 </head>
 <body>
 
-    <h1>คำนวณความเร็ว ที่เคยทำเวลาไว้ดีสุดช่วง 1 ปีที่ผ่านมา</h1>
+    <h1>คำนวณความเร็ว VCR จากระยะที่เคยทำเวลาไว้ดีสุดช่วง 1 ปีที่ผ่านมา</h1>
 
     <label class="inline-label" for="distance">ระยะทาง (กม.):</label>
     <input type="number" id="distance" name="distance" min="0" step="0.01" placeholder="ใส่ระยะทาง"> ตั้งแต่ 5 - 45 กม.
