--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@ var paceFormatted = paceMinutes + ":" + paceSeconds;
             document.getElementById('scr').innerHTML = ": " + pace3 + " - " + pace2 + " นาที/กม. ระยะเวลา 60-90 นาที";
             document.getElementById('mcr').innerHTML = ": " + pace4 + " - " + pace3 + " นาที/กม. ระยะเวลา 45-60 นาที";
             document.getElementById('fcr').innerHTML = ": " + pace5 + " - " + pace4 + " นาที/กม. ระยะเวลา 30-45 นาที";
-            document.getElementById('eir').innerHTML = ": " + pace7 + " - " + pace6 + " วิ่ง 5 นาที พัก 1-3 นาที 4-6 รอบ";
+            document.getElementById('eir').innerHTML = ": " + pace7 + " - " + pace6 + " วิ่ง (1 กม. หรือ 4 นาที) พัก 1-3 นาที 4-7 รอบ";
         }
     </script>
 
