--- a/index.html
+++ b/index.html
@@ -202,10 +202,10 @@
             document.getElementById('fcr').innerHTML = ": " + pace5 + " - " + pace4 + " นาที/กม. ระยะเวลา 30-45 นาที";
             document.getElementById('eir').innerHTML = ": " + pace7 + " - " + pace6 + " วิ่ง (1 กม. หรือ 5 นาที) พัก 1-3 นาที 4-7 รอบ";
 
-            document.getElementById('race5k').innerHTML = predictRaceTime(5, 107) + " (ความเร็ว 107% VCR Pace)";
-            document.getElementById('race10k').innerHTML = predictRaceTime(10, 102) + " (ความเร็ว 102% VCR Pace)";
-            document.getElementById('raceHalf').innerHTML = predictRaceTime(21.0975, 97) + " (ความเร็ว 97% VCR Pace)";
-            document.getElementById('raceFull').innerHTML = predictRaceTime(42.195, 90) + " (ความเร็ว 90% VCR Pace)";
+            document.getElementById('race5k').innerHTML = predictRaceTime(5, 107);
+            document.getElementById('race10k').innerHTML = predictRaceTime(10, 101);
+            document.getElementById('raceHalf').innerHTML = predictRaceTime(21.0975, 98) ;
+            document.getElementById('raceFull').innerHTML = predictRaceTime(42.195, 91);
         }
 
         // ฟังก์ชันสำหรับการกด Enter เพื่อคำนวณ
