--- a/index.html
+++ b/index.html
@@ -202,10 +202,11 @@
             document.getElementById('fcr').innerHTML = ": " + pace5 + " - " + pace4 + " นาที/กม. ระยะเวลา 30-45 นาที";
             document.getElementById('eir').innerHTML = ": " + pace7 + " - " + pace6 + " วิ่ง (1 กม. หรือ 5 นาที) พัก 1-3 นาที 4-7 รอบ";
 
-            document.getElementById('race5k').innerHTML = predictRaceTime(5, 107);
-            document.getElementById('race10k').innerHTML = predictRaceTime(10, 101);
-            document.getElementById('raceHalf').innerHTML = predictRaceTime(21.0975, 98) ;
-            document.getElementById('raceFull').innerHTML = predictRaceTime(42.195, 91);
+            document.getElementById('race5k').innerHTML = predictRaceTime(5, 107) + " (" + calculatePaceFromVCR(107) + " นาที/กม.)";
+            document.getElementById('race10k').innerHTML = predictRaceTime(10, 101) + " (" + calculatePaceFromVCR(101) + " นาที/กม.)";
+            document.getElementById('raceHalf').innerHTML = predictRaceTime(21.0975, 98) + " (" + calculatePaceFromVCR(98) + " นาที/กม.)";
+            document.getElementById('raceFull').innerHTML = predictRaceTime(42.195, 91) + " (" + calculatePaceFromVCR(91) + " นาที/กม.)";
+
         }
 
         // ฟังก์ชันสำหรับการกด Enter เพื่อคำนวณ
