--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             </tr>
         </table>
 
-        <h1>Race Predict</h1>
+        <h1>Race Predict (เวลาคาดการณ์โดยประมาณ ใช้ Race Pace นี้เพื่อซ้อมก่อนแข่ง 2-4 สัปดาห์ได้)</h1>
         <table>
             <tr>
                 <td>5K</td>
@@ -204,8 +204,8 @@
 
             document.getElementById('race5k').innerHTML = predictRaceTime(5, 106) + " (" + calculatePaceFromVCR(107) + " นาที/กม.)";
             document.getElementById('race10k').innerHTML = predictRaceTime(10, 101) + " (" + calculatePaceFromVCR(101) + " นาที/กม.)";
-            document.getElementById('raceHalf').innerHTML = predictRaceTime(21.0975, 98) + " (" + calculatePaceFromVCR(98) + " นาที/กม.)";
-            document.getElementById('raceFull').innerHTML = predictRaceTime(42.195, 91) + " (" + calculatePaceFromVCR(91) + " นาที/กม.)";
+            document.getElementById('raceHalf').innerHTML = predictRaceTime(21.0975, 98) + " (" + calculatePaceFromVCR(97) + " นาที/กม.)";
+            document.getElementById('raceFull').innerHTML = predictRaceTime(42.195, 91) + " (" + calculatePaceFromVCR(90) + " นาที/กม.)";
 
         }
 
