--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <p id="vcr"></p>
         <p id="vcrPace"></p>
 
-        <h1>Running Pace Table</h1>
+        <h1>Running Pace Table for Training</h1>
         <table>
             <tr>
                 <td>Aerobic Regeneration Run (ARR)</td>
