--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             </tr>
         </table>
 
-        <h1>Race Predict (เวลาคาดการณ์โดยประมาณ ใช้ Race Pace นี้เพื่อซ้อมก่อนแข่ง 2-4 สัปดาห์ได้)</h1>
+        <h1>Race Predict (Race Pace)</h1>
         <table>
             <tr>
                 <td>5K</td>
