--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 
             var vcrDistanceKm = Math.pow(3600 / totalSeconds, 1 / 1.06) * distance;
             var vcrDistanceMeters = Math.round(vcrDistanceKm * 1000);
-            var vcrSpeed = (vcrDistanceMeters / 3600).toFixed(1);
+            var vcrSpeed = (vcrDistanceMeters / 3600).toFixed(2);
             var vcrPaceSecondsPerKm = 1000 / vcrSpeed;
             var vcrPaceMinutes = Math.floor(vcrPaceSecondsPerKm / 60);
             var vcrPaceSeconds = Math.round(vcrPaceSecondsPerKm % 60);
@@ -192,7 +192,7 @@
 
             document.getElementById('result').innerHTML = "Pace (" + distance + " กม.): " + paceFormatted + " นาที/กม.";
             document.getElementById('vcrDistance').innerHTML = "VCR Distance (60 mins): " + vcrDistanceMeters + " เมตร";
-            document.getElementById('vcr').innerHTML = "VCR: " + vcrSpeed + " m/s";
+            document.getElementById('vcr').innerHTML = "VCR: " + vcrSpeed.toFixed(1) + " m/s";
             document.getElementById('vcrPace').innerHTML = "VCR Pace: " + vcrPaceMinutes + ":" + (vcrPaceSeconds < 10 ? "0" + vcrPaceSeconds : vcrPaceSeconds) + " นาที/กม.";
 
             document.getElementById('arr').innerHTML = ": " + pace1 + " นาที/กม. หรือช้ากว่า ระยะเวลา 30 นาที";
@@ -202,9 +202,9 @@
             document.getElementById('fcr').innerHTML = ": " + pace5 + " - " + pace4 + " นาที/กม. ระยะเวลา 30-45 นาที";
             document.getElementById('eir').innerHTML = ": " + pace7 + " - " + pace6 + " วิ่ง (1 กม. หรือ 5 นาที) พัก 1-3 นาที 4-7 รอบ";
 
-            document.getElementById('race5k').innerHTML = predictRaceTime(5, 107) + " (" + calculatePaceFromVCR(107) + " นาที/กม.)";
+            document.getElementById('race5k').innerHTML = predictRaceTime(5, 106) + " (" + calculatePaceFromVCR(106) + " นาที/กม.)";
             document.getElementById('race10k').innerHTML = predictRaceTime(10, 101) + " (" + calculatePaceFromVCR(101) + " นาที/กม.)";
-            document.getElementById('raceHalf').innerHTML = predictRaceTime(21.0975, 97) + " (" + calculatePaceFromVCR(97) + " นาที/กม.)";
+            document.getElementById('raceHalf').innerHTML = predictRaceTime(21.0975, 97) + " (" + calculatePaceFromVCR(96) + " นาที/กม.)";
             document.getElementById('raceFull').innerHTML = predictRaceTime(42.195, 90) + " (" + calculatePaceFromVCR(90) + " นาที/กม.)";
 
         }
