--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 
             var vcrDistanceKm = Math.pow(3600 / totalSeconds, 1 / 1.06) * distance;
             var vcrDistanceMeters = Math.round(vcrDistanceKm * 1000);
-            var vcrSpeed = (vcrDistanceMeters / 3600).toFixed(1);
+            var vcrSpeed = (vcrDistanceMeters / 3600);
             var vcrPaceSecondsPerKm = 1000 / vcrSpeed;
             var vcrPaceMinutes = Math.floor(vcrPaceSecondsPerKm / 60);
             var vcrPaceSeconds = Math.round(vcrPaceSecondsPerKm % 60);
