--- a/vcrpace.html
+++ b/vcrpace.html
@@ -24,7 +24,7 @@
             margin-top: 10px;
         }
         table {
-            width: auto;
+            width: 100%;
             border-collapse: collapse;
             margin-top: 20px;
             text-align: left;
@@ -32,9 +32,9 @@
         table td {
             padding: 5px 10px;
             font-family: monospace;
+            vertical-align: top;
         }
         table tr td:first-child {
-            text-align: right;
             width: 40%;
         }
         table tr td:last-child {
