--- a/vcrpace.html
+++ b/vcrpace.html
@@ -24,21 +24,18 @@
             margin-top: 10px;
         }
         table {
-            width: 100%;
+            width: auto;
             border-collapse: collapse;
             margin-top: 20px;
-            text-align: left;
         }
         table td {
-            padding: 5px 10px;
-            font-family: monospace;
+            padding: 5px 15px;
+            text-align: left;
             vertical-align: top;
+            font-family: monospace;
         }
         table tr td:first-child {
-            width: 40%;
-        }
-        table tr td:last-child {
-            width: 60%;
+            width: 50%;
         }
         h1 {
             font-size: 1.2em;
