--- a/vcrpace.html
+++ b/vcrpace.html
@@ -64,15 +64,15 @@
                 var paceInSeconds = 1000 / (vcr * (percent / 100));
                 var minutes = Math.floor(paceInSeconds / 60);
                 var seconds = Math.floor(paceInSeconds % 60);
-                return minutes + ":" + (seconds < 10 ? "0" + seconds : seconds) + " นาที/กม.";
+                return minutes + ":" + (seconds < 10 ? "0" + seconds : seconds) + " ";
             }
 
-            document.getElementById('zone1').textContent = "Zone 1 (≤70%): " + calculatePace(70) + " หรือช้ากว่า";
-            document.getElementById('zone2').textContent = "Zone 2 (70%-85%): " + calculatePace(70) + " - " + calculatePace(85);
-            document.getElementById('zone3').textContent = "Zone 3 (85%-90%): " + calculatePace(85) + " - " + calculatePace(90);
-            document.getElementById('zone4').textContent = "Zone 4 (90%-102%): " + calculatePace(90) + " - " + calculatePace(102);
-            document.getElementById('zone5').textContent = "Zone 5 (102%-110%): " + calculatePace(102) + " - " + calculatePace(110);
-            document.getElementById('zone6').textContent = "Zone 6 (>110%): " + calculatePace(110) + " หรือเร็วกว่า";
+            document.getElementById('zone1').textContent = "Zone 1 (≤70%): " + calculatePace(70) + " นาที/กม." + " หรือช้ากว่า" ;
+            document.getElementById('zone2').textContent = "Zone 2 (70%-85%): " + calculatePace(85) + " - " + calculatePace(70) + " นาที/กม." ;
+            document.getElementById('zone3').textContent = "Zone 3 (85%-90%): " + calculatePace(90) + " - " + calculatePace(85) + " นาที/กม." ;
+            document.getElementById('zone4').textContent = "Zone 4 (90%-102%): " + calculatePace(102) + " - " + calculatePace(90) + " นาที/กม." ;
+            document.getElementById('zone5').textContent = "Zone 5 (102%-110%): " + calculatePace(113) + " - " + calculatePace(102) + " นาที/กม." ;
+            document.getElementById('zone6').textContent = "Zone 6 (>110%): " + calculatePace(113) + " หรือเร็วกว่า";
         }
 
         // ฟังก์ชันสำหรับการกด Enter เพื่อคำนวณ
