--- a/vcr1.html
+++ b/vcr1.html
@@ -198,25 +198,25 @@
                 return `${formattedMinTime} - ${formattedMaxTime} (${minPaceFormatted} นาที/กม. - ${maxPaceFormatted} นาที/กม.)`;
             }
 
-            var pace1 = calculatePaceFromVCR(70);
-            var pace2 = calculatePaceFromVCR(80);
-            var pace3 = calculatePaceFromVCR(85);
-            var pace4 = calculatePaceFromVCR(90);
-            var pace5 = calculatePaceFromVCR(97);
-            var pace6 = calculatePaceFromVCR(105);
-            var pace7 = calculatePaceFromVCR(110);
+            // var pace1 = calculatePaceFromVCR(70);
+            // var pace2 = calculatePaceFromVCR(80);
+            // var pace3 = calculatePaceFromVCR(85);
+            // var pace4 = calculatePaceFromVCR(90);
+            // var pace5 = calculatePaceFromVCR(97);
+            // var pace6 = calculatePaceFromVCR(105);
+            // var pace7 = calculatePaceFromVCR(110);
 
-            document.getElementById('result').innerHTML = "Pace (" + distance + " กม.): " + paceFormatted + " นาที/กม.";
-            document.getElementById('vcrDistance').innerHTML = "VCR Distance (60 mins): " + vcrDistanceMeters + " เมตร";
-            document.getElementById('vcr').innerHTML = "VCR: " + vcrSpeed.toFixed(1) + " m/s";
-            document.getElementById('vcrPace').innerHTML = "VCR Pace: " + vcrPaceMinutes + ":" + (vcrPaceSeconds < 10 ? "0" + vcrPaceSeconds : vcrPaceSeconds) + " นาที/กม.";
+            // document.getElementById('result').innerHTML = "Pace (" + distance + " กม.): " + paceFormatted + " นาที/กม.";
+            // document.getElementById('vcrDistance').innerHTML = "VCR Distance (60 mins): " + vcrDistanceMeters + " เมตร";
+            // document.getElementById('vcr').innerHTML = "VCR: " + vcrSpeed.toFixed(1) + " m/s";
+            // document.getElementById('vcrPace').innerHTML = "VCR Pace: " + vcrPaceMinutes + ":" + (vcrPaceSeconds < 10 ? "0" + vcrPaceSeconds : vcrPaceSeconds) + " นาที/กม.";
 
-            document.getElementById('arr').innerHTML = ": " + pace1 + " นาที/กม. หรือช้ากว่า ระยะเวลา 30 นาที สำหรับฟื้นฟู หรือ มากกว่า 120 นาที สำหรับพัฒนาระบบแอโรบิค";
-            document.getElementById('lsd').innerHTML = ": " + pace2 + " - " + pace1 + " นาที/กม. ระยะเวลา 90-120 นาที สำหรับพัฒนาระบบแอโรบิค";
-            document.getElementById('scr').innerHTML = ": " + pace3 + " - " + pace2 + " นาที/กม. ระยะเวลา 60-90 นาที สำหรับพัฒนาระบบแอโรบิค";
-            document.getElementById('mcr').innerHTML = ": " + pace4 + " - " + pace3 + " นาที/กม. ระยะเวลา 45-60 นาที สำหรับพัฒนาความอดทน";
-            document.getElementById('fcr').innerHTML = ": " + pace5 + " - " + pace4 + " นาที/กม. ระยะเวลา 30-45 นาที สำหรับพัฒนาความอดทน";
-            document.getElementById('eir').innerHTML = ": " + pace7 + " - " + pace6 + " วิ่ง (1 กม. หรือ 4 นาที) พัก 1-3 นาที 4-7 รอบ";
+            // document.getElementById('arr').innerHTML = ": " + pace1 + " นาที/กม. หรือช้ากว่า ระยะเวลา 30 นาที สำหรับฟื้นฟู หรือ มากกว่า 120 นาที สำหรับพัฒนาระบบแอโรบิค";
+            // document.getElementById('lsd').innerHTML = ": " + pace2 + " - " + pace1 + " นาที/กม. ระยะเวลา 90-120 นาที สำหรับพัฒนาระบบแอโรบิค";
+            // document.getElementById('scr').innerHTML = ": " + pace3 + " - " + pace2 + " นาที/กม. ระยะเวลา 60-90 นาที สำหรับพัฒนาระบบแอโรบิค";
+            // document.getElementById('mcr').innerHTML = ": " + pace4 + " - " + pace3 + " นาที/กม. ระยะเวลา 45-60 นาที สำหรับพัฒนาความอดทน";
+            // document.getElementById('fcr').innerHTML = ": " + pace5 + " - " + pace4 + " นาที/กม. ระยะเวลา 30-45 นาที สำหรับพัฒนาความอดทน";
+            // document.getElementById('eir').innerHTML = ": " + pace7 + " - " + pace6 + " วิ่ง (1 กม. หรือ 4 นาที) พัก 1-3 นาที 4-7 รอบ";
 
 
             
