--- a/vcr1.html
+++ b/vcr1.html
@@ -37,7 +37,7 @@
             margin-top: 20px;
             margin-left: 0;
             text-align: left;
-        }
+/*         }
         table td {
             padding: 5px 10px;
             font-family: monospace;
@@ -48,7 +48,7 @@
         }
         table tr td:last-child {
             width: 60%;
-        }
+        } */
         h1 {
             font-size: 1.2em;
         }
@@ -198,18 +198,18 @@
                 return `${formattedMinTime} - ${formattedMaxTime} (${minPaceFormatted} นาที/กม. - ${maxPaceFormatted} นาที/กม.)`;
             }
 
-            // var pace1 = calculatePaceFromVCR(70);
-            // var pace2 = calculatePaceFromVCR(80);
-            // var pace3 = calculatePaceFromVCR(85);
-            // var pace4 = calculatePaceFromVCR(90);
-            // var pace5 = calculatePaceFromVCR(97);
-            // var pace6 = calculatePaceFromVCR(105);
-            // var pace7 = calculatePaceFromVCR(110);
+            var pace1 = calculatePaceFromVCR(70);
+            var pace2 = calculatePaceFromVCR(80);
+            var pace3 = calculatePaceFromVCR(85);
+            var pace4 = calculatePaceFromVCR(90);
+            var pace5 = calculatePaceFromVCR(97);
+            var pace6 = calculatePaceFromVCR(105);
+            var pace7 = calculatePaceFromVCR(110);
 
-            // document.getElementById('result').innerHTML = "Pace (" + distance + " กม.): " + paceFormatted + " นาที/กม.";
-            // document.getElementById('vcrDistance').innerHTML = "VCR Distance (60 mins): " + vcrDistanceMeters + " เมตร";
-            // document.getElementById('vcr').innerHTML = "VCR: " + vcrSpeed.toFixed(1) + " m/s";
-            // document.getElementById('vcrPace').innerHTML = "VCR Pace: " + vcrPaceMinutes + ":" + (vcrPaceSeconds < 10 ? "0" + vcrPaceSeconds : vcrPaceSeconds) + " นาที/กม.";
+            document.getElementById('result').innerHTML = "Pace (" + distance + " กม.): " + paceFormatted + " นาที/กม.";
+            document.getElementById('vcrDistance').innerHTML = "VCR Distance (60 mins): " + vcrDistanceMeters + " เมตร";
+            document.getElementById('vcr').innerHTML = "VCR: " + vcrSpeed.toFixed(1) + " m/s";
+            document.getElementById('vcrPace').innerHTML = "VCR Pace: " + vcrPaceMinutes + ":" + (vcrPaceSeconds < 10 ? "0" + vcrPaceSeconds : vcrPaceSeconds) + " นาที/กม.";
 
             // document.getElementById('arr').innerHTML = ": " + pace1 + " นาที/กม. หรือช้ากว่า ระยะเวลา 30 นาที สำหรับฟื้นฟู หรือ มากกว่า 120 นาที สำหรับพัฒนาระบบแอโรบิค";
             // document.getElementById('lsd').innerHTML = ": " + pace2 + " - " + pace1 + " นาที/กม. ระยะเวลา 90-120 นาที สำหรับพัฒนาระบบแอโรบิค";
